# rrprettier

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: 01pprint.py  02tofile.py  03listp.py  ex1_pprint.py  ex2_infile.py
src/rrprettier/: __init__.py
src/rrprettier.egg-info/: PKG-INFO  SOURCES.txt
src/rrprettier2/: __init__.py
tests/: test_dl.py
