# [build-system]
# requires=["setuptools >= 42"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "rrprettier"
version = "0.1.0"
description = "My awesome Python project"
authors = ["RadoTheProgrammer <rado@arazakar.com>"]

[tool.poetry.dependencies]
python = "^3.7"




